[project]
name = "resq"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "huggingface-hub>=0.33.0",
    "joblib>=1.5.1",
    "langchain>=0.3.25",
    "langchain-community>=0.3.25",
    "langchain-core>=0.3.65",
    "langchain-groq>=0.3.2",
    "langgraph>=0.4.8",
    "langgraph-cli[inmem]>=0.3.3",
    "scikit-learn>=1.7.0",
    "torch>=2.7.1",
    "uvicorn>=0.34.3",
    "watchdog>=6.0.0",
]
